Made it mobile responsive

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
             
             <div class="text-content">
                 <h1>
-                    <span>Together, We Have the</span> 
-                    <span>Power to Save Our Planet</span>
+                    <span>Together, We Have the Power to Save Our Planet</span>
                 </h1>
                 <p>Join Us in bringing hope, opportunity and profound change to our planet. Together, we can create a brighter and healthier future, transform communites, and make a lasting difference in the world.</p>
 
